apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__custom_plugin.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 592
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.custom_plugins
  data:
    datapoints:
      - value: 1
        attributes: {}
