apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__env_metrics.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 564
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.env
  data:
    datapoints:
      - value: 1
        attributes:
          opt.apollo.dev: true
          opt.apollo.graph_ref: true
          opt.apollo.key: true
          opt.apollo.license: true
          opt.apollo.license.path: true
          opt.apollo.supergraph.path: true
          opt.apollo.supergraph.urls: true
          opt.security.non_local_selections: true
          opt.security.recursive_selections: true
