apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__ignore_cloud_router_plugins.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 605
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.custom_plugins
  data:
    datapoints:
      - value: 1
        attributes: {}
