apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__license_halt.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 580
expression: "& metrics.non_zero()"
---
- name: apollo.router.lifecycle.license
  data:
    datapoints:
      - value: 1
        attributes:
          license.state: halt
