apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@apq.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.apq
  data:
    datapoints:
      - value: 1
        attributes:
          opt.router.cache.in_memory: true
          opt.router.cache.redis: true
          opt.subgraph: true
