apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@authorization.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.authorization
  data:
    datapoints:
      - value: 1
        attributes:
          opt.directives: false
          opt.require_authentication: true
