apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@batching.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.batching
  data:
    datapoints:
      - value: 1
        attributes:
          opt.mode: batch_http_link
