apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@coprocessor.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.coprocessor
  data:
    datapoints:
      - value: 1
        attributes:
          opt.router.request: true
          opt.router.response: true
          opt.subgraph.request: true
          opt.subgraph.response: true
          opt.supergraph.request: true
          opt.supergraph.response: true
