apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__metrics__test__metrics@demand_control.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
assertion_line: 555
expression: "& metrics.non_zero()"
---
- name: apollo.router.config.demand_control
  data:
    datapoints:
      - value: 1
        attributes:
          opt.mode: measure
          opt.strategy: static_estimated
